# Google-Drive-OneDrive-TidySync

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  build_exe.bat  config.example.yaml  publish_exe.bat  pyproject.toml  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: launch-post.md
src/tidysync/: __init__.py  __main__.py  cli.py  config.py  dedupe.py  gdocs.py  interactive.py  progress.py  rclone.py  report.py  schedule.py  state.py  syncjob.py
tests/: test_dedupe.py  test_gdocs.py  test_interactive.py  test_smoke.py
