[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tidysync"
version = "0.1.0"
description = "Delta sync between Google Drive and OneDrive, built on rclone."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.scripts]
tidysync = "tidysync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
